# aispamclassifier

./: README.md  build-systems-overrides.nix  flake.nix  pyproject.toml
src/: inference.py  main.py  training.py
src/aispamclassifier/: config.py  corpus.py  inference.py  server.py  spamcheck.py  training.py
src/aispamclassifier/tests/: test_spamcheck.py
