[build-system]
requires = ["uv_build >= 0.8.17, <0.9.0"]
build-backend = "uv_build"

[project]
name = "aispamclassifier"
description = "A tool to classify spam/ham using an ML model"
version = "1.0.0"
dependencies = [
    "notmuch",
    "scikit-learn",
    "nltk",
    "pandas",
    "matplotlib",
    "torch (==2.7.1)",
    "transformers (==4.55.3)",
    "datasets",
    "accelerate",
    "beautifulsoup4",
    "langid",
]

[project.scripts]
train = "aispamclassifier.training:main"
inference = "aispamclassifier.inference:main"
server = "aispamclassifier.server:main"
spamcheck = "aispamclassifier.spamcheck:main"
